--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import 'helper';
 * {margin: 0;padding: 0}
 * {box-sizing: border-box}
 *::before{box-sizing: border-box}
@@ -7,3 +8,9 @@ ul,ol {
   list-style: none;
 }
 a{text-decoration: none; color: inherit;}
+
+body{
+  font-family: $font-hei;
+  font-size: 16px;
+  line-height: 1.2;
+}
